# The-lambda-cube

./: README.md
Lambda2/: lambda2.cabal
Lambda2/app/: Main.hs
Lambda2/src/: Lexer.hs  Parser.hs  Syntax.hs  TypeSystem.hs  Types.hs
Typed/: CHANGELOG.md  tlc.cabal
Typed/app/: Main.hs
Typed/src/: Parser.hs  Syntax.hs  TypeSystem.hs
Untyped/: ulc.cabal
Untyped/app/: Main.hs
Untyped/src/: Eval.hs  Lexer.hs  Parser.hs  Syntax.hs
