cabal-version:      2.4
name:               lambda2
version:            0.1.0.0
author:             Christoffer Lind Andersen
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Syntax, Types, Lexer, Parser, TypeSystem
  build-depends:       base, text, mtl, containers, megaparsec, parser-combinators
  default-language:    Haskell2010

executable lambda2
    main-is:          Main.hs
    build-depends:    base, text, lambda2
    hs-source-dirs:   app
    default-language: Haskell2010
