cabal-version:      2.4
name:               ulc
version:            0.1.0.0
author:             Christoffer Lind Andersen
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Syntax, Lexer, Parser, Eval
  build-depends:       base, text, megaparsec, parser-combinators
  default-language:    Haskell2010

executable ulc
    main-is:          Main.hs
    build-depends:    base, text, ulc
    hs-source-dirs:   app
    default-language: Haskell2010
